5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1662_1399.log
== TEST (2019-04-15 15:29:22) 
-- CODE:
rutra = int(input("quantidade de votos: "))
olecram = int(input("quantidade de votos: "))

v = rutra + olecram 

if (rutra > olecram):
	print(round(v, 2))
else:
	print(round(v, 2))
-- OUTPUT:
80390000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:45) 
-- CODE:
rutra = int(input("quantidade de votos: "))
olecram = int(input("quantidade de votos: "))

if (rutra > olecra):
	print("Ambrosio Rutra")
	print(round(v ,2))
else:
	print("Demelza Olecram")
	print(round(v ,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if (rutra > olecra):
NameError: name 'olecra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:45) 
-- CODE:
rutra = int(input("quantidade de votos: "))
olecram = int(input("quantidade de votos: "))

if (rutra >  olecram):
	print("Ambrosio Rutra")
	print(round( ,2))
else:
	print("Demelza Olecram")
	print(round( ,2))
-- ERROR:
File "XXXX", line 6
    print(round( ,2))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
rutra = int(input("quantidade de votos: "))
olecram = int(input("quantidade de votos: "))

 votos = (rutra + olecram) / 100
	
if (rutra >  olecram):
	print("Ambrosio Rutra")
	print(round(,2))
else:
	print("Demelza Olecram")
	print(round( ,2))
-- ERROR:
File "XXXX", line 4
    votos = (rutra + olecram) / 100
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:36) 
-- CODE:
rutra = int(input("quantidade de votos: "))
olecram = int(input("quantidade de votos: "))

 votos = (rutra + olecram) / 100
	
if (rutra >  olecram):
	print("Ambrosio Rutra")
	print(round(votos, 2))
else:
	print("Demelza Olecram")
	print(round(votos ,2))
-- ERROR:
File "XXXX", line 4
    votos = (rutra + olecram) / 100
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
